--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,9 @@ phases:
       - dnf update -y
       - echo "Installing Java and Maven..."
       - dnf install -y java-17-amazon-corretto maven
+      - echo "Checking AWS CLI version..."
+      - aws --version
+      - yum install -y aws-cli
       # - yum update -y
       # - amazon-linux-extras enable corretto17
       # - yum install -y java-17-amazon-corretto maven
@@ -14,6 +17,8 @@ phases:
       - java -version
       - echo "Maven version:"
       - mvn -version
+      - echo "Checking if Docker is running..."
+      - docker info
       - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2 &
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
 
@@ -24,7 +29,10 @@ phases:
       - aws --version
       - echo "$AWS_REGION"
       - REPOSITORY_URI=${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPOSITORY_NAME}
-      - $(aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI)
+      - echo "$REPOSITORY_URI"
+      # - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI
+      # - $(aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI)
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
