--- a/bakfiles/buildspec.yml
+++ b/bakfiles/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo "Updating Amazon Linux 2023 and installing dependencies..."
       - dnf update -y
       - echo "Installing Java and Maven..."
-      - dnf install -y java-1.8.0-openjdk maven  # Change to Java 8
+      - dnf install -y java-17-amazon-corretto maven
       - echo "Checking AWS CLI version..."
       - aws --version
       - yum install -y aws-cli
@@ -16,6 +16,11 @@ phases:
       - mvn -version
       - echo "Checking if Docker is running..."
       - docker info
+      # - dnf install -y docker
+      # - systemctl enable docker
+      # - systemctl start docker
+      # - usermod -aG docker $USER
+      # - chmod 666 /var/run/docker.sock
       - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2 &
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
 
@@ -33,8 +38,8 @@ phases:
   build:
     commands:
       - echo "Build started on `date`"
-      - echo "Running Maven compile..."
-      - mvn clean compile
+      # - echo "Running Maven compile..."
+      # - mvn clean compile
       - echo "Running Maven build..."
       - mvn clean package -DskipTests
       - echo "Building Docker image..."
