--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo "Updating Amazon Linux 2023 and installing dependencies..."
       - dnf update -y
       - echo "Installing Java and Maven..."
-      - dnf install -y java-1.8.0-openjdk maven  # Change to Java 8
+      - dnf install -y java-1.8.0-amazon-corretto maven
       - echo "Checking AWS CLI version..."
       - aws --version
       - yum install -y aws-cli
