--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,9 +7,12 @@ phases:
       - dnf update -y
       - echo "Installing Java and Maven..."
       - dnf install -y java-1.8.0-amazon-corretto maven
+      - echo "Setting default Java to Amazon Corretto 8..."
+      # Set Java 8 as the default
+      - alternatives --config java
       - echo "Checking AWS CLI version..."
       - aws --version
-      - yum install -y aws-cli
+      # - yum install -y aws-cli
       - echo "Java version:"
       - java -version
       - echo "Maven version:"
