--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,8 @@ phases:
       - echo "Installing Java and Maven..."
       - dnf install -y java-1.8.0-amazon-corretto maven
       - echo "Setting default Java to Amazon Corretto 8..."
-      # Set Java 8 as the default
-      - alternatives --config java
+      # Set Java 8 as the default (non-interactively)
+      - alternatives --set java /usr/lib/jvm/java-1.8.0-amazon-corretto.x86_64/jre/bin/java
       - echo "Checking AWS CLI version..."
       - aws --version
       # - yum install -y aws-cli
@@ -36,8 +36,8 @@ phases:
   build:
     commands:
       - echo "Build started on `date`"
-      - echo "Running Maven compile..."
-      - mvn clean compile
+      # - echo "Running Maven compile..."
+      # - mvn clean compile
       - echo "Running Maven build..."
       - mvn clean package -DskipTests
       - echo "Building Docker image..."
